Fix overflow on Chrome

--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -46,7 +46,7 @@
 }
 
 .project .screenshot {
-  width: 75%;
+  width: 65%;
 }
 
 .justify-right .screenshot {
